@@ -46,22 +46,7 @@ DynamicBody::DynamicBody():Body()
   v0[0] = v0[1] = v0[2] = 0;
   dv[0] = dv[1] = dv[2] = 0;
   w[0] = w[1] = w[2] = 0;
-  dw[0] = dw[1] = dw[2] = 0;
-  sv[0] = sv[1] = sv[2] = 0;
-  sw[0] = sw[1] = sw[2] = 0;
-  cv[0] = cv[1] = cv[2] = 0;
-  cw[0] = cw[1] = cw[2] = 0;
-  hhv[0] = hhv[1] = hhv[2] = 0;
-  hhw[0] = hhw[1] = hhw[2] = 0;
-  pph[0] = pph[1] = pph[2] = 0;
-  ppb[0] = ppb[1] = ppb[2] = 0;
-  
-  
-  MAL_S3x3_MATRIX_SET_IDENTITY(pastR);
-  pastp[0] = pastp[1] = pastp[2] = 0;
-  pastv0[0] = pastv0[1] = pastv0[2] = 0;
-  pastw[0] = pastw[1] = pastw[2] = 0;
-  pastq = pastdq = 0;
+  dw[0] = dw[1] = dw[2] = 0;  
 }
 
 DynamicBody::~DynamicBody()
@@ -90,35 +75,12 @@ DynamicBody & DynamicBody::operator=(const DynamicBody & r)
   dv = r.dv;
   w = r.w;
   dw = r.dw;
-  sv = r.sv;
-  sw = r.sw;
-  cv = r.cv;
-  cw = r.cw;
-  hhv = r.hhv;
-  hhw = r.hhw;
-  pph = r.pph;
-  ppb = r.ppb;
-  
-  pastR = r.pastR;
-  pastp = r.pastp;
-  pastv0 = r.pastv0;
-  pastw = r.pastw;
-  pastq =r.pastq;
-  pastdq =r.pastdq;
-  
+    
   sister = r.sister;
   child = r.child;
   
   P = r.P;
   L = r.L;
-  m_tildem = r.m_tildem;
-  m_tildem_sister = r.m_tildem_sister;
-
-  m_tildec = r.m_tildec;
-  m_tildec_sister = r.m_tildec_sister;
-  m_tildeI = r.m_tildeI;
-  m_tildeI_sister = r.m_tildeI_sister;
-  m_Dsister = r.m_Dsister;
 
   m_RMC_m = r.m_RMC_m;
   m_RMC_h = r.m_RMC_h;
